# AIC20-Client-Cpp

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
client/src/AI/: AI.cpp  AI.h
client/src/Core/: Controller.cpp  Controller.h  EventQueue.h
client/src/Core/Message/: AuthenticationMessage.h  CreateCastMessage.h  CreateMoveMessage.h  CreatePickMessage.h  EndTurnMessage.h  EventMessage.h  InitMessage.cpp  InitMessage.h  Message.cpp  Message.h  PickMessage.cpp  PickMessage.h  ShutdownMessage.h  TurnMessage.cpp  TurnMessage.h
client/src/Core/Message/Create/: AuthenticationMessage.h  CreateCastSpellMessage.h  CreateDamageUpgradeMessage.h  CreatePickMessage.h  CreatePutUnitMessage.h  CreateRangeUpgradeMessage.h  CreateTurnMessage.h  EndTurnMessage.h  EventMessage.cpp  EventMessage.h
client/src/Core/Message/Parse/: InitMessage.cpp  InitMessage.h  ParseError.h  PickMessage.cpp  PickMessage.h  ShutdownMessage.cpp  ShutdownMessage.h  TurnMessage.cpp  (+1 more)
client/src/Model/: AreaSpell.cpp  AreaSpell.h  BaseUnit.cpp  BaseUnit.h  CastAreaSpell.cpp  CastAreaSpell.h  CastSpell.cpp  CastSpell.h  CastUnitSpell.cpp  CastUnitSpell.h  Cell.cpp  Cell.h  Deck.cpp  Deck.h  Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  Hand.h  King.cpp  King.h  Map.cpp  Map.h  Path.cpp  Path.h  Player.cpp  Player.h  Spell.cpp  Spell.h  Unit.cpp  Unit.h  UnitSpell.cpp  UnitSpell.h  World.h  enums.h
client/src/Network/: FileDescriptor.h  Network.cpp  Network.h  NetworkError.h
client/src/Utility/: Logger.h  Utility.h
client/src/nlohmann/: json.hpp
